gtm: 2026-08-21 post pack + prod routing incident fix (excl. crawler db >100MB)
